src/test/ui/generic-associated-types/projection-type-lifetime-mismatch.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/projection-type-lifetime-mismatch.rs:17:5
   |
LL |     x.m()
   |     ^^^^^ lifetime `'static` required

error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/projection-type-lifetime-mismatch.rs:22:5
   |
LL |     x.m()
   |     ^^^^^ lifetime `'static` required

error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/projection-type-lifetime-mismatch.rs:27:5
   |
LL |     x.m()
   |     ^^^^^ lifetime `'static` required

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0621`.
